añadir cambios a la encuesta publica

--- a/backend/resources/question-publico.html
+++ b/backend/resources/question-publico.html
@@ -335,7 +335,7 @@
                 </svg>
             </div>
             <h2 class="text-xl font-headline font-bold text-foreground mb-2">Listo</h2>
-            <p class="text-muted-foreground mb-6">Guardamos tus respuestas para continuar el proceso. Pronto te contactaremos.</p>
+            <p class="text-muted-foreground mb-6">¡Pronto un asesor de Credipep te escribirá para ayudarte!</p>
             <button onclick="closeSuccessDialog()" class="w-full inline-flex items-center justify-center rounded-md text-sm font-medium bg-primary text-primary-foreground hover:bg-primary/90 h-10 px-4 py-2">Entendido</button>
         </div>
     </div>
