--- a/backend/resources/question-publico.html
+++ b/backend/resources/question-publico.html
@@ -1054,7 +1054,45 @@
             }
         }
 
+        async function checkQuestionnaireStatus() {
+            // Obtener cédula de la URL
+            const urlParams = new URLSearchParams(window.location.search);
+            const cedulaHash = Array.from(urlParams.keys())[0];
+
+            if (!cedulaHash) {
+                showAlert('No se proporcionó identificación válida.', 'error');
+                document.getElementById('questionnaireForm').innerHTML = '<p class="text-center text-red-600">Enlace inválido</p>';
+                return;
+            }
+
+            try {
+                const response = await fetch(`/api/questionnaire/status?cedula=${encodeURIComponent(cedulaHash)}`);
+                const data = await response.json();
+
+                if (data.completed) {
+                    // Ocultar formulario y mostrar mensaje
+                    document.getElementById('questionnaireForm').innerHTML = `
+                        <div class="text-center p-8">
+                            <svg class="mx-auto h-16 w-16 text-green-500 mb-4" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z" />
+                            </svg>
+                            <h2 class="text-2xl font-bold text-foreground mb-2">Cuestionario ya completado</h2>
+                            <p class="text-muted-foreground mb-4">Este cuestionario fue completado el ${new Date(data.completed_at).toLocaleDateString('es-ES', { year: 'numeric', month: 'long', day: 'numeric' })}</p>
+                            <p class="text-sm text-muted-foreground">Si necesitas actualizar tu información, por favor contacta a nuestro equipo.</p>
+                        </div>
+                    `;
+                    document.querySelector('.max-w-2xl.mx-auto.bg-card').classList.add('shadow-lg');
+                }
+            } catch (error) {
+                console.error('Error verificando estado del cuestionario:', error);
+                // Si hay error, dejar que continúe normalmente
+            }
+        }
+
         document.addEventListener('DOMContentLoaded', () => {
+            // Verificar si el cuestionario ya fue completado
+            checkQuestionnaireStatus();
+
             // Cargar configuraciones de préstamos desde la API
             loadLoanConfigurations();
 
