--- a/public/cuestionario/publico/index.html
+++ b/public/cuestionario/publico/index.html
@@ -116,60 +116,6 @@
                         </label>
                     </div>
 
-                    <!-- Selección de servicios legales específicos -->
-                    <div id="serviciosLegalesStep1" class="hidden space-y-3 mt-4 p-4 border rounded-lg bg-muted/30">
-                        <p class="text-sm font-semibold text-foreground">¿Qué servicio legal necesitas?</p>
-                        <div class="grid grid-cols-2 md:grid-cols-4 gap-3">
-                            <label class="block cursor-pointer">
-                                <input type="checkbox" name="tipo_servicio_legal" value="divorcio" class="peer sr-only">
-                                <div class="border rounded-lg p-3 transition hover:shadow-md peer-checked:border-primary peer-checked:ring-2 peer-checked:ring-primary/20 bg-background text-center h-full">
-                                    <p class="text-sm font-medium text-foreground">Divorcio</p>
-                                </div>
-                            </label>
-                            <label class="block cursor-pointer">
-                                <input type="checkbox" name="tipo_servicio_legal" value="pension_alimenticia" class="peer sr-only">
-                                <div class="border rounded-lg p-3 transition hover:shadow-md peer-checked:border-primary peer-checked:ring-2 peer-checked:ring-primary/20 bg-background text-center h-full">
-                                    <p class="text-sm font-medium text-foreground">Pensión alimenticia</p>
-                                </div>
-                            </label>
-                            <label class="block cursor-pointer">
-                                <input type="checkbox" name="tipo_servicio_legal" value="sucesion" class="peer sr-only">
-                                <div class="border rounded-lg p-3 transition hover:shadow-md peer-checked:border-primary peer-checked:ring-2 peer-checked:ring-primary/20 bg-background text-center h-full">
-                                    <p class="text-sm font-medium text-foreground">Sucesión</p>
-                                </div>
-                            </label>
-                            <label class="block cursor-pointer">
-                                <input type="checkbox" name="tipo_servicio_legal" value="notariado" class="peer sr-only">
-                                <div class="border rounded-lg p-3 transition hover:shadow-md peer-checked:border-primary peer-checked:ring-2 peer-checked:ring-primary/20 bg-background text-center h-full">
-                                    <p class="text-sm font-medium text-foreground">Notariado</p>
-                                </div>
-                            </label>
-                            <label class="block cursor-pointer">
-                                <input type="checkbox" name="tipo_servicio_legal" value="testamento" class="peer sr-only">
-                                <div class="border rounded-lg p-3 transition hover:shadow-md peer-checked:border-primary peer-checked:ring-2 peer-checked:ring-primary/20 bg-background text-center h-full">
-                                    <p class="text-sm font-medium text-foreground">Testamento</p>
-                                </div>
-                            </label>
-                            <label class="block cursor-pointer">
-                                <input type="checkbox" name="tipo_servicio_legal" value="traspaso" class="peer sr-only">
-                                <div class="border rounded-lg p-3 transition hover:shadow-md peer-checked:border-primary peer-checked:ring-2 peer-checked:ring-primary/20 bg-background text-center h-full">
-                                    <p class="text-sm font-medium text-foreground">Traspaso</p>
-                                </div>
-                            </label>
-                            <label class="block cursor-pointer">
-                                <input type="checkbox" name="tipo_servicio_legal" value="contrato" class="peer sr-only">
-                                <div class="border rounded-lg p-3 transition hover:shadow-md peer-checked:border-primary peer-checked:ring-2 peer-checked:ring-primary/20 bg-background text-center h-full">
-                                    <p class="text-sm font-medium text-foreground">Contrato</p>
-                                </div>
-                            </label>
-                            <label class="block cursor-pointer">
-                                <input type="checkbox" name="tipo_servicio_legal" value="otro" class="peer sr-only">
-                                <div class="border rounded-lg p-3 transition hover:shadow-md peer-checked:border-primary peer-checked:ring-2 peer-checked:ring-primary/20 bg-background text-center h-full">
-                                    <p class="text-sm font-medium text-foreground">Otro</p>
-                                </div>
-                            </label>
-                        </div>
-                    </div>
                 </div>
 
                 <div id="step-2" class="space-y-4 hidden">
@@ -276,28 +222,44 @@
                         <p class="text-sm font-semibold text-muted-foreground">Servicios legales</p>
                         <div class="grid md:grid-cols-2 gap-4">
                             <div>
-                                <label class="block text-sm font-medium text-foreground mb-1">Tipo de trámite</label>
+                                <label class="block text-sm font-medium text-foreground mb-1">Tipo de trámite *</label>
                                 <div class="space-y-2 border rounded-md p-3 bg-background">
                                     <label class="flex items-center gap-2 text-sm text-foreground">
                                         <input type="checkbox" name="tramites" value="divorcio" class="h-4 w-4 text-primary border-input rounded">
                                         <span>Divorcio</span>
                                     </label>
                                     <label class="flex items-center gap-2 text-sm text-foreground">
+                                        <input type="checkbox" name="tramites" value="pension_alimenticia" class="h-4 w-4 text-primary border-input rounded">
+                                        <span>Pensión alimenticia</span>
+                                    </label>
+                                    <label class="flex items-center gap-2 text-sm text-foreground">
+                                        <input type="checkbox" name="tramites" value="sucesion" class="h-4 w-4 text-primary border-input rounded">
+                                        <span>Sucesión</span>
+                                    </label>
+                                    <label class="flex items-center gap-2 text-sm text-foreground">
+                                        <input type="checkbox" name="tramites" value="notariado" class="h-4 w-4 text-primary border-input rounded">
+                                        <span>Notariado</span>
+                                    </label>
+                                    <label class="flex items-center gap-2 text-sm text-foreground">
+                                        <input type="checkbox" name="tramites" value="testamento" class="h-4 w-4 text-primary border-input rounded">
+                                        <span>Testamento</span>
+                                    </label>
+                                    <label class="flex items-center gap-2 text-sm text-foreground">
                                         <input type="checkbox" name="tramites" value="traspaso" class="h-4 w-4 text-primary border-input rounded">
                                         <span>Traspaso de bienes</span>
                                     </label>
                                     <label class="flex items-center gap-2 text-sm text-foreground">
-                                        <input type="checkbox" name="tramites" value="sucesion" class="h-4 w-4 text-primary border-input rounded">
-                                        <span>Sucesiones</span>
+                                        <input type="checkbox" name="tramites" value="contrato" class="h-4 w-4 text-primary border-input rounded">
+                                        <span>Contrato</span>
                                     </label>
                                     <label class="flex items-center gap-2 text-sm text-foreground">
-                                        <input type="checkbox" name="tramites" value="otros" class="h-4 w-4 text-primary border-input rounded">
-                                        <span>Otros</span>
+                                        <input type="checkbox" name="tramites" value="otro" class="h-4 w-4 text-primary border-input rounded">
+                                        <span>Otro</span>
                                     </label>
                                 </div>
                             </div>
                             <div>
-                                <label class="block text-sm font-medium text-foreground mb-1">Urgencia</label>
+                                <label class="block text-sm font-medium text-foreground mb-1">Urgencia *</label>
                                 <select name="urgencia" class="w-full px-3 py-2 bg-background border border-input rounded-md text-sm">
                                     <option value="">Selecciona</option>
                                     <option value="inmediata">Inmediata (menos de 15 días)</option>
@@ -754,11 +716,6 @@
             document.getElementById('creditoFields').classList.toggle('hidden', !showCredito);
             document.getElementById('legalesFields').classList.toggle('hidden', !showLegales);
 
-            // Mostrar/ocultar servicios legales en step-1
-            const serviciosLegalesStep1 = document.getElementById('serviciosLegalesStep1');
-            if (serviciosLegalesStep1) {
-                serviciosLegalesStep1.classList.toggle('hidden', !showLegales);
-            }
         }
 
         // --- Instituciones Dropdown ---
